Update THREE.js version and script path

--- a/index.html
+++ b/index.html
@@ -646,10 +646,10 @@ UI ARCHITECTURE:
          EXTERNAL DEPENDENCIES
          ==================================================================== -->
     
-    <!-- THREE.js r150 - Core 3D rendering engine from official CDN -->
-    <script src="https://unpkg.com/three@0.150.0/build/three.min.js"></script>
+    <!-- THREE.js r150 - Core 3D rendering engine from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
     
     <!-- Main game logic and engine -->
-    <script src="js/game.js"></script>
+    <script src="./js/game.js"></script>
 </body>
 </html>
